tmp/funnel-output_path-xznk3Mom.tmp/gyak09/tests/unit/pods/errors/edit/controller-test.jshint.js
/home/ubuntu/workspace/tmp/jshinter-output_path-1VGuuiNc.tmp/unit/pods/errors/edit/controller-test.jshint.js